# dino_downstream

./: .env  LICENSE  README.md  pyproject.toml
backbone/: __init__.py  dino.py
tests/: test_model_save_load.py
